--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<header>
-			<h1>Magic 8 Ball</h1>
+			<h1>Magic 8 Ball NEW TEXT</h1>
 		</header>
 		<main>
 			<section id ="fortune-wrapper">
